--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.2",
     "bulma": "^1.0.4",
+    "i": "^0.3.7",
+    "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
