--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,6 @@ server/dist
 server/build
 server/.strapi-updater.json
 server/.strapi-cloud.json
+# TanStack Router generated files
+client/src/routeTree.gen.ts
+client/src/routeTree.gen.js
